add back to homepage button on individual recepies pages, fix for image width and height

--- a/recipes/borsch.html
+++ b/recipes/borsch.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Borsch</h1>
-    <img src="../images/borsch.jpg" alt="picture of a finished borsch dish">
+    <img style="height:auto;width: 200px;"src="../images/borsch.jpg" alt="picture of a finished borsch dish">
     <h2>Description</h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio fuga, 
@@ -30,7 +30,7 @@
         <li>Lorem</li>
         <li>Lorem</li>
     </ol>
-    <p></p>
+    <a href="../index.html">back to homepage</a>
     
 </body>
 </html>
