--- a/recipes/pierogi.html
+++ b/recipes/pierogi.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pierogi</h1>
-    <img src="../images/pierogi.jpg" alt="picture of a finished pierogi dish">
+    <img style="height:auto;width: 200px" src="../images/pierogi.jpg" alt="picture of a finished pierogi dish">
     <h2>Description</h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio fuga, 
@@ -30,7 +30,7 @@
         <li>Lorem</li>
         <li>Lorem</li>
     </ol>
-    <p></p>
+    <a href="../index.html">back to homepage</a>
     
 </body>
 </html>
